	wiederholtes Fehlschlagen ist noch unklar.

	* recode: Von Shell- auf C-Implementierung umgestellt

2009-08-16:

	callmonitor-1.15

2009-08-23:

	* musicpal.sh: Aktionen für Freecom MusicPal (Internetradio):
	    musicalpalmessage (benutzt MUSICPAL_TIMEOUT), musicpalclear
	* goyellow: Rückwärtssuche an neue Webseite angepasst

2009-08-30:

	callmonitor-1.15.1

	* Installation: Es können verschiedene Teilmengen der Callmonitor-
	Funktionalität installiert werden:
		
	    webif	Web interface
	    actions	Callmonitor actions (callable via 'callaction')
	    monitor	Monitoring daemon 'callmonitor'
	    phonebook	Phonebook support (and reverse lookup)

2009-09-04:

	* tel.sh: Bei der Normalisierung von Telefonnummern werden nun
	vorausgewählte Gruppen, die in die Zeichen * oder # eingeschlossen
	sind, entfernt (Anregung von ao)

	* fshash.sh: Die Benutzung eines leeren AVM-Telefonbuch führte dazu,
	dass das Telefonbuch immer wieder langwierig eingelesen wurde.

2009-09-11:

	callmonitor-1.16

2010-02-21:

	* webui.sh: Login bei Firmware 54.04.80 funktionierte nicht.
	
	* callmonitor: Bei Bedarf lassen sich nun die Anrufe auf einer anderen
	Box überwachen als auf der, auf der der Callmonitor läuft.
	
	* cgi: Expertenmodus eingeführt, um selten benötigte Funktionen zu
	verstecken.

	* 11880.sh: 11880 hat seine Rückwärtssuche-Seiten überarbeitet.

	callmonitor-1.17

2010-02-24:

	* callmonitor.sh: Argument --version eingeführt

2010-04-09:

	* modreg: Umstellung auf neue Datei-Registrierung; setzt aktuellen
	Freetz-Trunk voraus.

	callmonitor-1.17.1 für freetz-trunk

2010-04-10:

	* Weboberfläche: Alle internen Links korrigieren

	callmonitor-1.17.2 für freetz-trunk

2010-04-21:

	* reverse: DasTelefonbuch und GoYellow angepasst

2010-05-14:

	callmonitor-1.17.3 für freetz-trunk

2010-05-22:

	* samsung.sh: Nachrichten an bestimmte TV-Geräte von Samsung (via SOAP)

2010-05-24:

	callmonitor-1.18

	* goyellow.sh: Wieder verändert; erneut repariert.