@@ -11,15 +11,16 @@ Aktivierung des Callmonitor-Interfaces
 Wichtig
 ----------------------------------------------------------------------
 
-Goyellow funktioniert nicht mehr
-
-Eingebundene Aktionen konfigurierbar gestalten: Nicht jeder braucht alles
-(bereits vorgeladen)
 Suchreihenfolge der Telefonfonbücher: Warum Cache nicht immer als letztes?
 
 ----------------------------------------------------------------------
 Demnächst anschauen
 ----------------------------------------------------------------------
+
+Eingebundene Aktionen konfigurierbar gestalten: Nicht jeder braucht alles
+(bereits vorgeladen)
+
+Snarl-Protokoll SNP
 
 Expertenansicht per Javascript dynamisch aktivieren (ohne Submission)
 Evtl. webui_logout einfügen
