@@ -766,3 +766,12 @@
 	callmonitor-1.18
 
 	* goyellow.sh: Wieder verändert; erneut repariert.
+
+2010-06-13:
+
+	* samsung.sh: Bei der Aktion 'samsung' waren Quelle und Ziel
+	vertauscht.
+
+2010-06-20:
+
+	* webui.sh: Robustere Implementierung von webui_get
